# urlopen2

./: README.md  pyproject.toml
urlopen2/: __init__.py  aurlfile.py  aurlfile.pyi  types.py  urlfile.py  urlfile.pyi
