[tool.poetry]
name = "urlopen2"
version = "1.4.0"
keywords = ["urlopen", "urllib.request", "urlfile", "readable", "seekable"]
description = "Improvement for the `urllib.request.urlopen` function."
authors = ["Romanin <semina054@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
asyncio = ">=3.4"
aiofiles = ">=23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
